[package]
name = "rusp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.65", features = ["backtrace"]}
getopts = "0.2.21"
regex = "1.6.0"
rustyline = "10.0.0"
thiserror = "1.0.37"
xdg = "2.4.1"
